--- a/reg.html
+++ b/reg.html
@@ -103,6 +103,7 @@
 						success:function(data){
 							if(data.errno==200){ 
 								alert(data.msg)
+								window.location.href = 'main.html';
 								
 							}else{
 								alert(data.msg) 	
