--- a/reg.html
+++ b/reg.html
@@ -102,7 +102,7 @@
 						timeout:10000,//超时时间设置为10秒；
 						success:function(data){
 							if(data.errno==200){ 
-								alert(data.msg)
+								alert(data.msg);
 								mui.openWindow({
 									url: 'main.html',
 									show: {
@@ -111,7 +111,7 @@
 								})
 								
 							}else{
-								alert(data.msg) 	
+								alert(data.msg); 	
 							}
 						},
 						error:function(xhr,type,errorThrown){
