--- a/reg.html
+++ b/reg.html
@@ -115,7 +115,7 @@
 							}
 						},
 						error:function(xhr,type,errorThrown){
-							alert(xhr);alert(type);alert(errorThrown);
+							alert('邮箱唯一');
 						}
 					})	
 			}
