--- a/login.html
+++ b/login.html
@@ -140,45 +140,25 @@
 					alert('密码不能为空 ');
 					return false;
 				}
-				/* $.post(
+				$.post(
 					'http://passport.qianqianya.xyz/api/login', {
 						u_email: u_email,
 						u_pwd: u_pwd
 					},
-					function(msg) {
-						var storage = window.localStorage;
-						storage["token"] = msg.token
-						storage["u_id"] = msg.u_id
-						window.location.href = 'main.html';
-					}
-				) */
-				var url = 'http://firstteam.qianqianya.xyz/api/login';
-				mui.ajax(url, {
-					data: {
-						u_email: u_email,
-						u_pwd: u_pwd
-					},
-					dataType: 'json', //服务器返回json格式数据
-					type: 'post', //HTTP请求类型 
-					timeout: 10000, //超时时间设置为10秒；
-					success: function(data) {
-						if (data.status == 1000) {
+					function(data) {
+						if(data.ststus==1000){
 							alert(data.msg);
 							var storage = window.localStorage;
-							storage["token"] = msg.token;
-							storage["u_id"] = msg.u_id;
+							storage["token"] = data.token;
+							storage["u_id"] = data.u_id;
 							window.location.href = 'main.html';
-						} else {
+						}else{
 							alert(data.msg);
 						}
-					},
-					error: function(xhr, type, errorThrown) {
-						//异常处理；
-						alert(xhr);
-						alert(type);
-						alert(errorThrown);
+						
 					}
-				});
+					'json'
+				) 
 			})
 		</script>
 	</body>
