--- a/main.html
+++ b/main.html
@@ -21,7 +21,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav" style="padding-right: 15px;">
 			<h1 class="mui-title">商品</h1>
-			<button id='setting' class=" mui-pull-right mui-btn-link">设置</button>
+			<button id='setting' class=" mui-pull-right mui-btn-link">设置   </button>
+			<button id='mycenter' class=" mui-pull-right mui-btn-link">个人中心   &nbsp;&nbsp;</button>
 		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded">
@@ -34,6 +35,8 @@
 		<script src="js/mui.min.js"></script>
 		<script src="js/app.js"></script>
 		<script>
+			
+
 			var _tr;
 			
 			mui.ajax({  
@@ -65,8 +68,19 @@
 					extras:{goods_id:goods_id}  
 				});
 			}
+			$('#mycenter').click(function(){
+// 							var storage = window.localStorage;
+// 								var u_id = storage.u_id;
+				// 				alert(u_id);
+				mui.openWindow({ 
+				url: 'mycenter.html', 
+				show:{
+				  autoShow:true  
+				},
+				// extras:{u_id:u_id} 
+				})
+			});
 			
-
 		</script>
 	</body>
 
