--- a/main.1.html
+++ b/main.1.html
@@ -24,8 +24,8 @@
 				<div>
 					商品价格: <span class="goods_price"></span>
 				</div>
-				<div>
-					购买数量:<input type="number" id="num" value="1">
+				<div> 
+					购买数量:<input type="number" id="num" value="1" style="width: 65px;height: 30px;">
 					<input type="hidden" >
 				</div>
 			</div>
