--- a/cart.html
+++ b/cart.html
@@ -8,12 +8,43 @@
     <link href="css/comm.css" rel="stylesheet" type="text/css" />
     <link href="css/cartlist.css" rel="stylesheet" type="text/css" />
 	<link href="css/style.css" rel="stylesheet" />
+	<style>
+		.mui-popover {
+			height: 180px;
+		}
+		.mui-content {
+			padding: 10px;
+		}
+	</style>
 </head>
 <body>  <!--首页头部-->
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<h1 class="mui-title">购物车</h1>
+		<a id="menu" class="mui-action-menu mui-icon mui-icon-bars mui-pull-right" href="#topPopover"></a>
 	</header>
+	<div id="topPopover" class="mui-popover">
+		<div class="mui-popover-arrow"></div>
+		<div class="mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a href="#" id="goods">商品页面</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#">我的收藏</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#">我的赞</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a id='set'>设置</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	
+	</div>
 	<p style="border-top: 50px seashell solid;"></p> 
 	<!--首页头部 end-->
     <div>
@@ -76,6 +107,34 @@
 				GetCount();
 			}
 		})
+		$('#set').click(function() {
+			mui.openWindow({
+				url: 'setting.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
+		$('#goods').click(function() {
+			mui.openWindow({
+				url: 'main.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
 	})
+	</script>
+	<script>
+		mui.init({
+			swipeBack: true //启用右滑关闭功能
+		});
+		mui('.mui-scroll-wrapper').scroll();
+		mui('body').on('shown', '.mui-popover', function(e) {
+			//console.log('shown', e.detail.id);//detail为当前popover元素
+		});
+		mui('body').on('hidden', '.mui-popover', function(e) {
+			//console.log('hidden', e.detail.id);//detail为当前popover元素
+		});
 	</script>
 </html>
