--- a/mycenter.html
+++ b/mycenter.html
@@ -8,12 +8,21 @@
 		<link href="css/mui.css" rel="stylesheet" />
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
+		<style>
+			.mui-popover {
+				height: 220px;
+			}
+			.mui-content {
+				padding: 10px;
+			}
+		</style>
 	</head>
 		
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">用户中心</h1>
+			<a id="menu" class="mui-action-menu mui-icon mui-icon-bars mui-pull-right" href="#topPopover"></a>
 		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded">
@@ -40,11 +49,60 @@
 					<button id='logout' class="mui-btn mui-btn-yellow mui-btn-primary" style="width:345px;">注销</button>
 				</div> 
 			</div>
+			<div id="topPopover" class="mui-popover">
+				<div class="mui-popover-arrow"></div>
+				<div class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<ul class="mui-table-view">
+							<li class="mui-table-view-cell">
+								<a href="#" id="goods">商品页面</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a href="#" id="cart">购物车</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a href="#">我的收藏</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a href="#">我的赞</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a id='set'>设置</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			
+			</div>
 		</div>
 		
 		<script src="js/mui.min.js"></script>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
+			$('#set').click(function() {
+				mui.openWindow({
+					url: 'setting.html',
+					show: {
+						aniShow: true
+					},
+				})
+			})
+			$('#goods').click(function() {
+				mui.openWindow({
+					url: 'main.html',
+					show: {
+						aniShow: true
+					},
+				})
+			})
+			$('#cart').click(function() {
+				mui.openWindow({
+					url: 'cart.html',
+					show: {
+						aniShow: true
+					},
+				})
+			})
 
 				document.addEventListener('plusready',function () {
 				
@@ -92,6 +150,19 @@
 			})
 			mui.init()
 		</script>
+		<script>
+			mui.init({
+				swipeBack: true //启用右滑关闭功能
+			});
+			mui('.mui-scroll-wrapper').scroll();
+			mui('body').on('shown', '.mui-popover', function(e) {
+				//console.log('shown', e.detail.id);//detail为当前popover元素
+			});
+			mui('body').on('hidden', '.mui-popover', function(e) {
+				//console.log('hidden', e.detail.id);//detail为当前popover元素
+			});
+		</script>
+		
 	</body>
 
 </html>
