--- a/order.html
+++ b/order.html
@@ -15,13 +15,48 @@
 				height: 200px;
 				border:solid 1px #2AC845; 
 			}
+			.mui-popover {
+				height:270px;
+			}
+			.mui-content {
+				padding: 10px;
+			}
 			
 		</style>
 	</head>
 	<body>
 	<header class="mui-bar mui-bar-nav">
 		<h1 class="mui-title">填写订单</h1>
+		<a id="menu" class="mui-action-menu mui-icon mui-icon-bars mui-pull-right" href="#topPopover"></a>
 	</header>
+	<div id="topPopover" class="mui-popover">
+		<div class="mui-popover-arrow"></div>
+		<div class="mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a href="#" id="mycenter">个人中心</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#" id="goods">商品页面</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#" id="cart">购物车</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#">我的收藏</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="#">我的赞</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a id='set'>设置</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	
+	</div>
 	
 	<div id="goodsMsg">
 		<!-- 商品信息 -->	
@@ -48,4 +83,52 @@
 	</div>
 	<button id='login' class="mui-btn mui-btn-block mui-btn-primary">支付</button>
 	</body>
+	<script src="js/mui.min.js"></script> 
+	<script src="js/mui.enterfocus.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script>
+		$('#mycenter').click(function() {
+			mui.openWindow({
+				url: 'mycenter.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
+		$('#set').click(function() {
+			mui.openWindow({
+				url: 'setting.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
+		$('#goods').click(function() {
+			mui.openWindow({
+				url: 'main.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
+		$('#cart').click(function() {
+			mui.openWindow({
+				url: 'cart.html',
+				show: {
+					aniShow: true
+				},
+			})
+		})
+		mui.init({
+			swipeBack: true //启用右滑关闭功能
+		});
+		mui('.mui-scroll-wrapper').scroll();
+		mui('body').on('shown', '.mui-popover', function(e) {
+			//console.log('shown', e.detail.id);//detail为当前popover元素
+		});
+		mui('body').on('hidden', '.mui-popover', function(e) {
+			//console.log('hidden', e.detail.id);//detail为当前popover元素
+		});
+	</script>
 </html>
