--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 			}
 
 			.mui-popover {
-				height: 220px;
+				height: 240px;
 			}
 			.mui-content {
 				padding: 10px;
@@ -81,13 +81,52 @@
 				})
 			})
 			$('#cart').click(function() {
+				var storage = window.localStorage;
+				var u_id=storage.u_id;
+				var token=storage.token;
+				if (u_id&&token) {
+					mui.openWindow({
+						url: 'cart.html',
+						show: {
+							aniShow: true
+						},
+					})
+				} else{
+					login();
+				}
+			})
+			$('#mycenter').click(function() {
+				var storage = window.localStorage;
+				var u_id=storage.u_id;
+				var token=storage.token;
+				if (u_id&&token) {
+					mui.openWindow({
+						url: 'mycenter.html',
+						show: {
+							aniShow: true
+						},
+					})
+				} else{
+					login();
+				}
+			});
+			function login(){
+				alert('请先登录');
 				mui.openWindow({
-					url: 'cart.html',
+					url: 'login.html',
 					show: {
 						aniShow: true
 					},
 				})
-			})
+			}
+			$('#login').click(function() {
+				mui.openWindow({
+					url: 'login.html',
+					show: {
+						autoShow: true
+					},
+				})
+			});
 			var _tr;
 
 			mui.ajax({
@@ -123,14 +162,7 @@
 					}
 				});
 			}
-			$('#mycenter').click(function() {
-				mui.openWindow({
-					url: 'mycenter.html',
-					show: {
-						autoShow: true
-					},
-				})
-			});
+			
 		
 		</script>
 		<script>
