--- a/main.1.html
+++ b/main.1.html
@@ -190,7 +190,7 @@
 				mui.ajax(url,{
 					data:{
 						goods_id:goods_id,
-						uid : uid,
+						uid : u_id,
 						token : token,
 						status: 1
 					},
