--- a/order.html
+++ b/order.html
@@ -159,7 +159,7 @@
 		
 	 
 	</body>
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD
 	<script src="js/mui.min.js"></script> 
 	<script src="js/mui.enterfocus.js"></script>
 	<script src="js/app.js"></script>
@@ -209,7 +209,7 @@
 		});
 	</script>
 </html>
-=======
+======= -->
 	
 	
 	
@@ -249,7 +249,7 @@
 							}
 					}
 				})
-			})
+			})       
 		
 			mui.ajax('http://firstteam.qianqianya.xyz/ormsg',{
 				// dataType:'json',//服务器返回json格式数据
@@ -274,4 +274,3 @@
 	
 	
 </html>
->>>>>>> zmw
