--- a/orderList.html
+++ b/orderList.html
@@ -22,8 +22,9 @@
 		</table>
 	</body>
 	<script src="js/jquery-3.2.1.min.js"></script>
-		<script src="js/mui.js"></script>
-		<script src="js/app.js"></script>	
+		<script src="js/jquery-3.2.1.min.js"></script>
+		<script src="js/mui.min.js"></script>
+		<script src="js/app.js"></script> 
 		<script type="text/javascript">
 			mui.init()
 			$(function(){
