--- a/order.html
+++ b/order.html
@@ -232,6 +232,7 @@
 			$('#sub').click(function(){
 				//  获取商品数量 总金额
 				mui.ajax('http://firstteam.qianqianya.xyz/oradd',{
+					data:{money:money}
 					dataType:'json',//服务器返回json格式数据
 					type:'post',//HTTP请求类型
 					timeout:10000,//超时时间设置为10秒；
