--- a/main.1.html
+++ b/main.1.html
@@ -84,6 +84,7 @@
 			var storage = window.localStorage;
 			var u_id=storage.u_id;
 			var token=storage.token;
+			//storage.clear();
 			if (u_id&&token) {
 				mui.openWindow({
 					url: 'mycenter.html',
@@ -99,6 +100,7 @@
 			var storage = window.localStorage;
 			var u_id=storage.u_id;
 			var token=storage.token;
+			//storage.clear();
 			if (u_id&&token) {
 				mui.openWindow({
 					url: 'cart.html',
@@ -150,6 +152,7 @@
 			var storage = window.localStorage;
 			var u_id=storage.u_id;
 			var token=storage.token;
+			//storage.clear();
 			if (u_id&&token) {
 				mui.ajax('http://firstteam.qianqianya.xyz/cartAdd', {
 					data: {
