--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
 					<label>email</label>
-					<input id='u_email' type="text" class="mui-input-clear mui-input" placeholder="请输入邮箱">
+					<input value="111" id='u_email' type="text" class="mui-input-clear mui-input" placeholder="请输入邮箱">
 				</div>
 				<div class="mui-input-row">
 					<label>密码</label>
