--- a/main.html
+++ b/main.html
@@ -48,6 +48,9 @@
 							<a href="#">我的收藏</a>
 						</li>
 						<li class="mui-table-view-cell">
+							<a id="login">登陆页面</a>
+						</li>
+						<li class="mui-table-view-cell">
 							<a href="#">我的赞</a>
 						</li>
 						<li class="mui-table-view-cell">
@@ -80,6 +83,9 @@
 					},
 				})
 			})
+			
+			
+			
 			$('#cart').click(function() {
 				var storage = window.localStorage;
 				var u_id=storage.u_id;
@@ -96,6 +102,8 @@
 					login();
 				}
 			});
+			
+		
 			$('#mycenter').click(function() {
 				var storage = window.localStorage;
 				var u_id=storage.u_id;
@@ -129,6 +137,8 @@
 					},
 				})
 			});
+			
+			
 			var _tr;
 
 			mui.ajax({
@@ -152,10 +162,10 @@
  
 					$('#box').html(_tr) 
 				}, 
-					error: function(data) {
-						// alert(146); 
-						// alert(data.msg); 
-					} 
+				error: function(data) {
+					// alert(146); 
+					// alert(data.msg); 
+				} 
 			});   
 			
 			function onclicks(goods_id) {
