--- a/order.html
+++ b/order.html
@@ -154,8 +154,8 @@
 	</div>
 	  
 		
-		
-		
+		 
+		 
 		
 	 
 	</body>
@@ -232,7 +232,7 @@
 			$('#sub').click(function(){
 				//  获取商品数量 总金额
 				mui.ajax('http://firstteam.qianqianya.xyz/oradd',{
-					data:{money:money}
+					data:{money:money},
 					dataType:'json',//服务器返回json格式数据
 					type:'post',//HTTP请求类型
 					timeout:10000,//超时时间设置为10秒；
@@ -243,7 +243,7 @@
 										url: 'orderList.html',
 										show: {
 											aniShow: true
-										},
+										}, 
 									})
 							}else{
 								alert(data.msg)
@@ -253,7 +253,7 @@
 			})       
 		
 			mui.ajax('http://firstteam.qianqianya.xyz/ormsg',{
-				// dataType:'json',//服务器返回json格式数据
+				dataType:'json',//服务器返回json格式数据
 				type:'get',//HTTP请求类型
 				timeout:10000,//超时时间设置为10秒；
 				success:function(data){
