--- a/reg.html
+++ b/reg.html
@@ -48,7 +48,7 @@
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
 				</div>
 				<div class="mui-input-row">
-					<label>手机号</label>
+					<label>手机</label>
 					<input id='tel' type="text" class="mui-input-clear mui-input" placeholder="请输入手机号">
 				</div>
 				<div class="mui-input-row">
