--- a/reg.html
+++ b/reg.html
@@ -100,7 +100,7 @@
 					mui.ajax(url,{
 						data:{
 							name:name,
-							
+							tel:tel,
 							pwd:pwd,
 							rpwd:rpwd,
 							email:email,	
